Fix Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,32 @@ language: c
 matrix:
   include:
     - os: linux
+      addons:
+        apt:
+          packages:
+            - libreadline-dev
 
     - os: linux
+      addons:
+        apt:
+          packages:
+            - libreadline-dev
       env:
          - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 
     - os: linux
+      addons:
+        apt:
+          packages:
+            - libreadline-dev
       env:
          - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
 
     - os: linux
+      addons:
+        apt:
+          packages:
+            - libreadline-dev
       env:
          - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
